kubernetes/template.compiled.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  labels:
    app.kubernetes.io/part-of: outline
    app.kubernetes.io/name: outline
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/part-of: outline
    app.kubernetes.io/name: outline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  labels:
    app.kubernetes.io/part-of: outline
    app.kubernetes.io/component: server
    app.kubernetes.io/name: outline
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: outline
      app.kubernetes.io/component: server
      app.kubernetes.io/name: outline
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: outline
        app.kubernetes.io/component: server
        app.kubernetes.io/name: outline
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
      containers:
      - name: outline
        image: outline
        ports:
        - containerPort: 3000
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        readinessProbe:
          httpGet:
            path: /api/v3/status
            port: 3000
            httpHeaders:
            - name: Host
              value: outline.con2.fi
          initialDelaySeconds: 15
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /api/v3/status
            port: 3000
            httpHeaders:
            - name: Host
              value: outline.con2.fi
          initialDelaySeconds: 30
          periodSeconds: 30
        volumeMounts:
        - mountPath: /home/outline
          name: outline-temp
      volumes:
      - name: outline-temp
        emptyDir:
          medium: Memory
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: outline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - secretName: ingress-letsencrypt
    hosts:
    - outline.con2.fi
  rules:
  - host: outline.con2.fi
    http:
      paths:
      - path: /
        backend:
          serviceName: outline
          servicePort: 3000
